Fixed styling of container where overflow was either scrolling or hidden. Audio preview also available via Spotify

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,28 @@
-.main{
+body{
   background:
   linear-gradient(
     rgba(0, 0, 0, 0.45),
     rgba(255, 0, 235, 0.45)
     ),
-    url("http://img05.deviantart.net/7fab/i/2011/082/3/c/jammin___by_murrmernator-d3cbdd9.png");
+    url("https://66.media.tumblr.com/c97868160fc2d5ddf9ea546e0853c0b6/tumblr_n7kjymW5QH1r7xp9co1_500.gif");
     background-repeat: no-repeat;
-    background-size: contain;;
-    overflow: hidden;
+    background-size: cover;
+    overflow: visible;
     width: 100%;
-    height: 1200px;
   }
   .container {
     position: relative;
     margin: 0 auto;
+padding-bottom: 50%
+ }
+  h1 {
+    font-size: 64px;
+    color: white;
   }
-  .row{
-    margin: 350px auto 0 auto;
+  p{
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
   }
   .form-group input {
     height: 45px;
